--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "redux": "^4.0.5",
+    "redux-logger": "^3.0.6",
+    "redux-persist": "^6.0.0",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
@@ -48,7 +50,6 @@
   "devDependencies": {
     "husky": "^5.2.0",
     "lint-staged": "^10.5.4",
-    "prettier": "^2.2.1",
-    "redux-devtools-extension": "^2.13.9"
+    "prettier": "^2.2.1"
   }
 }
